--- a/templates/react-mst-universal/package.json
+++ b/templates/react-mst-universal/package.json
@@ -56,6 +56,7 @@
     "core-js": "^2.5.1",
     "create-react-class": "^15.6.2",
     "cross-env": "^1.0.8",
+    "cross-port-killer": "^1.0.1",
     "css-loader": "^0.28.4",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
@@ -64,10 +65,9 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.2.0",
     "jest": "^23.5.0",
     "jest-css-modules-transform": "^2.0.0",
@@ -75,9 +75,12 @@
     "jest-enzyme": "^6.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "mini-css-extract-plugin": "0.4.1",
     "multer": "^1.3.0",
     "node-sass": "^4.7.2",
     "nodemon": "1.12.5",
+    "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
@@ -88,6 +91,7 @@
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.6.0",
+    "puppeteer": "^1.7.0",
     "react-hot-loader": "^3.1.2",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^6.0.6",
@@ -98,13 +102,15 @@
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0",
     "stylus-loader": "^1.4.2",
+    "tcp-port-used": "^1.0.0",
     "template-html-loader": "^1.0.0",
     "ts-loader": "^2.0.2",
     "typescript": "^2.2.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.7",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "2.7.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.6",
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
