--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
@@ -42,7 +42,7 @@
     "inquirer": "^5.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
-    "nornj": "^0.4.5",
+    "nornj": "^5.0.0-beta.6",
     "ora": "^1.3.0",
     "process.args": "0.0.6",
     "targz": "^1.0.1",
