--- a/templates/react-mst/package.json
+++ b/templates/react-mst/package.json
@@ -84,7 +84,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "image-webpack-loader": "^3.2.0",
-    ##{jest}##"less": "^2.7.2",
+    {{%jest%}}"less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "0.4.1",
@@ -103,7 +103,7 @@
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.6.0",
-    ##{puppeteer}##"react-hot-loader": "^3.1.2",
+    {{%puppeteer%}}"react-hot-loader": "^3.1.2",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.0",
@@ -180,8 +180,8 @@
   },
   "njCliConfig": {
     "templateType": "single-page",
-    "jest": ##{jest ? 'true' : 'false'}##,
-    "e2e": ##{puppeteer ? 'true' : 'false'}##,
+    "jest": {{%jest ? 'true' : 'false'%}},
+    "e2e": {{%puppeteer ? 'true' : 'false'%}},
     "pageTemplates": [
       "default",
       "chart",
