--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nornj-cli",
-  "version": "0.5.0-alpha.2",
+  "version": "0.5.0-alpha.3",
   "description": "The CLI for scaffolding NornJ template projects, and do more things",
   "bin": {
     "nj": "bin/nj"
@@ -39,13 +39,16 @@
     "commander": "^2.9.0",
     "download-git-repo": "^1.0.1",
     "git-exec": "^0.2.1",
+    "global-modules": "^2.0.0",
     "inquirer": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
+    "mv": "^2.1.1",
     "nornj": "^5.0.0-rc.15",
     "ora": "^1.3.0",
     "process.args": "0.0.6",
+    "rimraf": "^2.6.3",
     "targz": "^1.0.1",
     "yargs": "^11.0.0"
   },
