--- a/templates.config.json
+++ b/templates.config.json
@@ -1,5 +1,10 @@
 [
   "react-mst",
+  {
+    "name": "react-mst",
+    "alias": "react-mobx",
+    "mobxRoot": true
+  },
   "react-mst-app",
   "other"
 ]
